[package]
name = "rtop"
version = "0.2.9"
authors = ["Aniket Mishra <aniket2contact@gmail.com>"]
description = "Resource monitor for linux"
repository = "https://github.com/nix-rs/rtop"
license = "MIT"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
